--- a/json_formatter/package.json
+++ b/json_formatter/package.json
@@ -8,7 +8,11 @@
   },
   "build": {
     "appId": "com.secutix.helper",
-    "productName": "Secutix Helper"
+    "productName": "Secutix Helper",
+    "icon": "build/icon.ico",
+    "win": {
+      "icon": "build/icon.ico"
+    }
   },
   "keywords": [],
   "author": "",
